--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
+# Metadata
+*.jpg~
+
+#project
 .idea
+build/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+
+# Dependency directories
+node_modules
+
+# Optional npm cache directory
+.npm
